# flask-react-parcel-starter

./: .gitignore  README.md  app.py  build.js  package-lock.json  package.json  pyproject.toml
src/: pages-one.js  pages-two.js
src/components/: page.js
templates/: index.html
templates/pages/: one.html  two.html
